--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4500/data",
+  "proxy": "http://localhost:4500/",
   "eslintConfig": {
     "extends": [
       "react-app",
