--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "node index.js",
     "client": "npm run start --prefix ../frontend",
-    "dev": "concurrently --kill-others-on-fail \"npm run server \"npm run client"
+    "dev": "concurrently --kill-others-on-fail \"npm run server \"npm run client",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
